--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,99 @@ li {
   margin-bottom: 30px;
 }
 
+/*FORMULARIO CONTACTOS*/
+.inicio__contenido {
+  width: 100%;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 10px;
+}
+
+.formulario {
+  width: 400px;
+  background: rebeccapurple;
+  border-radius: 10px;
+}
+
+.container-formulario {
+  display: flex;
+  padding-left: 300px;
+  align-items: center;
+}
+
+.nombreForm {
+  display: flex;
+  padding: 0 10px;
+  box-sizing: border-box;
+  justify-content: left;
+}
+
+.emailForm {
+  padding: 0 10px;
+  box-sizing: border-box;
+}
+
+.contacto__contenido {
+  font-size: 5px;
+}
+
+/* VIDEOS EN PAGINA CLIPS*/
+.clips__grid {
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  grid-template-rows: 30% 30% 30%;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 250px;
+}
+
+/* IMAGENES EN PAGINA PELICULAS*/
+.peliculas__grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+
+.container-peli {
+  text-align: center;
+}
+
+.peliculas__grid img {
+  width: 100%;
+  height: 100%;
+}
+
+.container-peli {
+  margin: 5px;
+  padding: 5px;
+}
+
+/*SUBGENEROS CONTENIDOS*/
+.subgeneros__contenido-h2 {
+  padding: 30px;
+  margin: 3px;
+  text-align: left;
+  font-size: 25px;
+}
+
+.subgeneros__contenido-p {
+  margin: 1px;
+  text-align: left;
+  font-size: 15px;
+}
+
+.subgeneros__imagenSecu {
+  padding: 30px;
+  display: flex;
+  align-items: end;
+  width: 300px;
+  flex-direction: column;
+}
+
 /*ESTILOS FOOTER*/
 .footer__links {
   background-color: rgb(43, 2, 2);
@@ -151,96 +244,6 @@ li {
   grid-area: footer;
 }
 
-/*FORMULARIO CONTACTOS*/
-.form {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  padding: 10px;
-}
-
-.formulario {
-  transform: translate(-50%, -50%);
-  width: 400px;
-  background: rebeccapurple;
-  border-radius: 10px;
-}
-
-.container-formulario {
-  display: flex;
-  padding-left: 300px;
-  align-items: center;
-}
-
-.nombreForm {
-  display: flex;
-  padding: 0 10px;
-  box-sizing: border-box;
-  justify-content: left;
-}
-
-.emailForm {
-  padding: 0 10px;
-  box-sizing: border-box;
-}
-
-.contacto__contenido {
-  margin-bottom: 10px;
-  font-size: 5px;
-}
-
-/* VIDEOS EN PAGINA CLIPS*/
-.clips__grid {
-  display: grid;
-  grid-template-columns: 30% 30% 30%;
-  grid-template-rows: 30% 30% 30%;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 250px;
-}
-
-/* IMAGENES EN PAGINA PELICULAS*/
-.peliculas__grid {
-  display: grid;
-  grid-template-columns: repeat(4, 2fr);
-  grid-template-rows: repeat(2, 200px);
-  grid-template-areas: "peli1 peli2 peli3 peli4" "peli5 peli6 peli7 peli8";
-  align-items: center;
-  justify-content: space-between;
-}
-
-.peliculas__grid img {
-  width: 100%;
-  height: 100%;
-}
-
-.container-peli {
-  margin: 5px;
-  padding: 5px;
-}
-
-/*SUBGENEROS CONTENIDOS*/
-.subgeneros__contenido-h2 {
-  padding: 30px;
-  margin: 3px;
-  text-align: left;
-  font-size: 25px;
-}
-
-.subgeneros__contenido-p {
-  margin: 1px;
-  text-align: left;
-  font-size: 15px;
-}
-
-.subgeneros__imagenSecu {
-  padding: 30px;
-  display: flex;
-  align-items: end;
-  width: 300px;
-  flex-direction: column;
-}
-
 /*RESPONSIVE*/
 @media screen and (max-width: 749px) {
   #body {
@@ -259,6 +262,30 @@ li {
   .border {
     background-color: rgb(146, 0, 107);
   }
+  .peliculas__grid {
+    grid-template-columns: 1fr;
+  }
+  .container-contacto {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .container-formulario {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .formulario, .contacto__contenido {
+    width: 100%;
+    justify-content: center;
+  }
+  .main__banner-picture img {
+    width: 100%;
+    height: auto;
+  }
+  .container-peli img {
+    height: 10rem;
+    width: 10rem;
+  }
 }
 @media screen and (min-width: 750px) and (max-width: 900px) {
   #body {
@@ -269,6 +296,10 @@ li {
   .border {
     background-color: rgb(102, 255, 0);
   }
+  .container-peli img {
+    height: 10rem;
+    width: 10rem;
+  }
 }
 @media screen and (min-width: 901px) and (max-width: 1400px) {
   #body {
@@ -278,6 +309,17 @@ li {
   }
   .border {
     background-color: rgb(255, 0, 0);
+  }
+  .container-peli img {
+    height: 10rem;
+    width: 10rem;
+  }
+  .container-contacto {
+    display: flex;
+  }
+  .container-formulario {
+    display: flex;
+    justify-content: left;
   }
 }
 
