--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,11 @@ li {
   display: inline-block;
 }
 
+.border {
+  border: 1px black solid;
+  background-color: white;
+}
+
 /*ESTILOS NAVBAR*/
 #header {
   width: 100%;
@@ -135,10 +140,7 @@ li {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-}
-
-.container-peli {
-  text-align: center;
+  margin-bottom: 40px;
 }
 
 .peliculas__grid img {
@@ -147,7 +149,8 @@ li {
 }
 
 .container-peli {
-  margin: 5px;
+  text-align: center;
+  margin: 10px;
   padding: 5px;
 }
 
@@ -225,7 +228,7 @@ li {
 
 .border {
   border: 1px black solid;
-  background-color: aquamarine;
+  background-color: white;
 }
 
 #header {
