--- a/sass/presets/_footer.scss
+++ b/sass/presets/_footer.scss
@@ -2,7 +2,7 @@
 .footer__links {
     background-color: rgb(43, 2, 2);
 }
-    
+
 #footer {
     display: flex;
     background-color: rgb(43, 2, 2);
@@ -50,7 +50,7 @@
     
 .border {
     border: 1px black solid;
-    background-color: aquamarine;
+    background-color: white;
 }
 
     #header {
