--- a/sass/presets/_main.scss
+++ b/sass/presets/_main.scss
@@ -2,7 +2,7 @@
 .main__banner-picture img {
     width: 100vw;
 }
-    
+
 /*SECCIÓN INICIO 1 - TÍTULO*/
 .inicio__contenido-h1 {
     margin: 30px;
@@ -88,13 +88,8 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     gap: 20px; 
+    margin-bottom: 40px;
 }
-
-.container-peli {
-    text-align: center; 
-}
-
-
 
 .peliculas__grid img {
     width: 100%;
@@ -102,7 +97,8 @@
 }
 
 .container-peli {
-    margin: 5px;
+    text-align: center; 
+    margin: 10px;
     padding: 5px;
 }
 
