--- a/sass/presets/_main.scss
+++ b/sass/presets/_main.scss
@@ -75,13 +75,19 @@
 /* VIDEOS EN PAGINA CLIPS*/
 .clips__grid {
     display: grid;
-    grid-template-columns: 30% 30% 30%;
-    grid-template-rows: 30% 30% 30%;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 250px;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    justify-content: center; 
+    max-width: 1980px; 
+    margin: 0 auto; 
+    margin-top: 30px; 
 }
 
+.clips__grid iframe {
+    width: 100%; 
+    height: 315px; 
+    max-width: 600px; 
+}
 /* IMAGENES EN PAGINA PELICULAS*/
 
 .peliculas__grid {
